Fixing errors in startup.js. (Uncaught ReferenceError)

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <!-- Menu Toggle Script -->
     <script>
         
-    //rssmailer.util.startup.loadViews();
+    rssmailer.util.startup.loadViews();
     $("#menu-toggle").click(function(e) {
         e.preventDefault();
         $("#wrapper").toggleClass("toggled");
