common.js - Common

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <!-- Knockout Core JavaScript -->
     <script src="/js/knockout.js" ></script>
     <script src="/utils/startup.js" ></script>
+    <script src="/js/common.js" ></script>
 
     <!-- Menu Toggle Script -->
     <script>
