--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
     <!-- Knockout Core JavaScript -->
     <script src="/js/knockout.js" ></script>
+    <script src="/config.js"></script>
     <script src="/utils/startup.js" ></script>
     <script src="/js/common.js" ></script>
 
