--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <title>Вход</title>
     <script src="/js/jquery.js"></script>
+    <script src="/config.js"></script>
     <script src="/utils/startup.js"></script>
     <script src="/js/common.js"></script>
     <!-- Stylesheets -->
@@ -24,7 +25,7 @@
                     <label for="login-username">Электронная почта</label>
                     <input id="email" type="text" class="round full-width-input" />
                 </p>
-
+                
                 <p>
                     <label for="login-password">пароль</label>
                     <input id="password" class="round full-width-input" type="password" />
