fixing bugs with wrong paths

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <title>RSSMAILER WEB CLIENT</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="/css/simple-sidebar.css" rel="stylesheet">
+    <link href="css/simple-sidebar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -51,16 +51,16 @@
     <!-- /#wrapper -->
 
     <!-- jQuery -->
-    <script src="/js/jquery.js"></script>
+    <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
     <!-- Knockout Core JavaScript -->
-    <script src="/js/knockout.js" ></script>
-    <script src="/config.js"></script>
-    <script src="/utils/startup.js" ></script>
-    <script src="/js/common.js" ></script>
+    <script src="js/knockout.js" ></script>
+    <script src="config.js"></script>
+    <script src="utils/startup.js" ></script>
+    <script src="js/common.js" ></script>
 
     <!-- Menu Toggle Script -->
     <script>
