--- a/registration.html
+++ b/registration.html
@@ -15,7 +15,7 @@
 
     <!-- Custom CSS -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
-    <script src="/config.js" ></script>
+    <script src="config.js" ></script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -61,7 +61,7 @@
                             <div class="form-group">
                                 <div class="col-sm-offset-2 col-sm-10">
                                     <div id='loadingmessage' style='display:none'>
-                                        <img src='/images/ajax-loader.gif'/>
+                                        <img src='images/ajax-loader.gif'/>
                                     </div>
                                 <button id="btnRegister" onclick="register()" type="button" class="btn btn-primary">Регистрация</button>
                                 </div>
