--- a/login.html
+++ b/login.html
@@ -2,14 +2,14 @@
 <head>
     <meta charset="utf-8">
     <title>Вход</title>
-    <script src="/js/jquery.js"></script>
-    <script src="/config.js"></script>
-    <script src="/utils/startup.js"></script>
-    <script src="/js/common.js"></script>
+    <script src="config.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="utils/startup.js"></script>
+    <script src="js/common.js"></script>
     <!-- Stylesheets -->
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet'>
 
-    <link href="/css/loginStyle.css" rel="stylesheet" />
+    <link href="css/loginStyle.css" rel="stylesheet" />
 
    
     <!-- Optimize for mobile devices -->
@@ -34,7 +34,7 @@
                 <p>Я <a href="#">забыл пароль</a>.</p> 
 
                 <input type="button" ID="btnEnter" value="ВХОД" class="button round blue image-right ic-right-arrow" onclick="rssmailer.util.startup.login()" />
-                или <a  href="/registration.html">Зарегистрируйтесь</a>        
+                или <a  href="registration.html">Зарегистрируйтесь</a>        
             </fieldset>
 
             <br />
